--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.0-SNAPSHOT'
 	id 'io.spring.dependency-management' version '1.1.4'
+	id "com.netflix.dgs.codegen" version "6.1.5"
 }
 
 group = 'com.turminaz'
@@ -27,8 +28,13 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-graphql'
-	compileOnly 'org.projectlombok:lombok'
+	implementation 'com.graphql-java:graphql-java-extended-scalars:19.0' // bump up as soon as netflix allows it
+	implementation("com.tailrocks.graphql:graphql-datetime-spring-boot-starter:6.0.0")
+	implementation 'org.jeasy:easy-random-core:5.0.0'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework:spring-webflux'
@@ -37,4 +43,8 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+generateJava{
+	schemaPaths = ["${projectDir}/src/main/resources/graphql"] // List of directories containing schema files
 }
