--- a/build.gradle
+++ b/build.gradle
@@ -29,15 +29,19 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-graphql'
 	implementation 'org.springframework.boot:spring-boot-starter-amqp'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 	implementation 'com.graphql-java:graphql-java-extended-scalars:19.0' // bump up as soon as netflix allows it
 	implementation("com.tailrocks.graphql:graphql-datetime-spring-boot-starter:6.0.0")
-	implementation 'org.jeasy:easy-random-core:5.0.0'
-	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	testImplementation 'uk.co.jemos.podam:podam:8.0.1.RELEASE'
+	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+	implementation 'com.google.firebase:firebase-admin:9.2.0'
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.security:spring-security-test'
 	testImplementation 'org.springframework:spring-webflux'
 	testImplementation 'org.springframework.graphql:spring-graphql-test'
 
