--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,5 +1,7 @@
 FROM bellsoft/liberica-runtime-container:jdk-21-stream-musl as build
 ARG JAR_FILE
+ARG GOOGLE_APPLICATION_CREDENTIALS_BASE64
+ENV GOOGLE_APPLICATION_CREDENTIALS_BASE64 $GOOGLE_APPLICATION_CREDENTIALS_BASE64
 COPY ${JAR_FILE} app.jar
 EXPOSE 8080
 ENTRYPOINT ["sh", "-c", "java ${JAVA_OPTS} -jar /app.jar ${0} ${@}"]
