--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,9 +28,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-graphql'
-	implementation 'org.springframework.boot:spring-boot-starter-amqp'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+	implementation 'com.opencsv:opencsv:5.9'
 	implementation 'com.graphql-java:graphql-java-extended-scalars:19.0' // bump up as soon as netflix allows it
 	implementation("com.tailrocks.graphql:graphql-datetime-spring-boot-starter:6.0.0")
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
