--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -19,9 +19,8 @@ spring:
           jwk-set-uri: https://www.googleapis.com/service_accounts/v1/jwk/securetoken%40system.gserviceaccount.com
   data:
     mongodb:
-      host: localhost
-      port: 37681
+      database: test
+      uri: mongodb://localhost:27017
 
-de.flapdoodle.mongodb.embedded.version: 6.0.5
 server:
   port: 8079
