--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -17,6 +17,7 @@ spring:
       resourceserver:
         jwt:
           jwk-set-uri: https://www.googleapis.com/service_accounts/v1/jwk/securetoken%40system.gserviceaccount.com
+          issuer-uri: https://securetoken.google.com/my-rating-app-auth
   data:
     mongodb:
       database: test
