--- a/app/cloudbuild.yaml
+++ b/app/cloudbuild.yaml
@@ -12,7 +12,7 @@ steps:
       - build
       - '-t'
       - gcr.io/$PROJECT_ID/my-rating-app:$SHORT_SHA
-      - .
+      - ./app
   - name: gcr.io/cloud-builders/docker
     args:
       - push
