--- a/app/cloudbuild.yaml
+++ b/app/cloudbuild.yaml
@@ -1,19 +1,19 @@
 steps:
   - name: 'gradle:8.9-jdk21-alpine'
-    dir: app
     args:
       - clean
       - build
       - '--no-daemon'
-    entrypoint: gradle
+    entrypoint: app/gradle
   - name: gcr.io/cloud-builders/docker
+    dir: app
     env:
       - JAR_FILE=build/libs/*SNAPSHOT.jar
     args:
       - build
       - '-t'
       - gcr.io/$PROJECT_ID/my-rating-app:$SHORT_SHA
-      - ./app
+      - .
   - name: gcr.io/cloud-builders/docker
     args:
       - push
