--- a/build.gradle
+++ b/build.gradle
@@ -3,14 +3,15 @@ plugins {
 	id 'org.springframework.boot' version '3.4.0'
 	id 'io.spring.dependency-management' version '1.1.4'
 	id "com.netflix.dgs.codegen" version "6.1.5"
-//	id 'org.graalvm.buildtools.native' version '0.10.3'
 }
 
 group = 'com.turminaz'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = '21'
+	toolchain {
+		languageVersion = JavaLanguageVersion.of(21)
+	}
 }
 
 configurations {
