Add SPRING_DATA_MONGODB_URI env var

--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ out/
 *.ipr
 *.iws
 application-local.yml
+application-cloud.yml
 ##############################
 ## Eclipse
 ##############################
