--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,8 +26,9 @@ spring:
           issuer-uri: https://securetoken.google.com/my-rating-app-auth
   data:
     mongodb:
-      database: test
-      uri: mongodb://localhost:27017
+      database: my-rating-app
+      uri: ${SPRING_DATA_MONGODB_URI:mongodb://localhost:27017}
+#      uri: mongodb://localhost:27017
 
 server:
   port: 8079
