--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -7,4 +7,13 @@ spring:
       firestore:
         emulator:
           enabled: true
+  data:
+    mongodb:
+      database: my-rating-app
+      uri: ${SPRING_DATA_MONGODB_URI:mongodb://localhost:27017}
   security:
+de:
+  flapdoodle:
+    mongodb:
+      embedded:
+        version: 4.4.0
