--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -30,7 +30,7 @@ steps:
       - '--service-account'
       - ci-982@my-rating-app-auth.iam.gserviceaccount.com
       - '--allow-unauthenticated'
-      - '--update-env-vars'
+      - '--update-secrets'
       - SPRING_DATA_MONGODB_URI=projects/$PROJECT_ID/secrets/MONGODB_URI:latest
 images:
   - gcr.io/$PROJECT_ID/my-rating-app:$SHORT_SHA
