--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.3.1'
+	id 'org.springframework.boot' version '3.4.0'
 	id 'io.spring.dependency-management' version '1.1.4'
-	id "com.netflix.dgs.codegen" version "6.1.5"
+	id("org.springdoc.openapi-gradle-plugin") version "1.9.0"
 }
 
 group = 'com.turminaz'
@@ -35,6 +35,7 @@ dependencies {
 	implementation 'com.fasterxml.jackson.core:jackson-databind'
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 	implementation 'com.opencsv:opencsv:5.9'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
 	implementation platform("com.google.cloud:spring-cloud-gcp-dependencies:5.1.0")
@@ -54,8 +55,4 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
-}
-
-generateJava{
-	schemaPaths = ["${projectDir}/src/main/resources/graphql"] // List of directories containing schema files
 }
