--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -11,12 +11,12 @@ steps:
     args:
       - build
       - '-t'
-      - gcr.io/$PROJECT_ID/my-rating-app:$SHORT_SHA
+      - australia-southeast1-docker.pkg.dev/$PROJECT_ID/my-rating-repo/my-rating-app:$SHORT_SHA
       - .
   - name: gcr.io/cloud-builders/docker
     args:
       - push
-      - gcr.io/$PROJECT_ID/my-rating-app:$SHORT_SHA
+      - australia-southeast1-docker.pkg.dev/$PROJECT_ID/my-rating-repo/my-rating-app:$SHORT_SHA
   - name: gcr.io/google.com/cloudsdktool/cloud-sdk
     entrypoint: gcloud
     args:
@@ -24,7 +24,7 @@ steps:
       - 'deploy'
       - my-rating-app
       - '--image'
-      - gcr.io/$PROJECT_ID/my-rating-app:$SHORT_SHA
+      - australia-southeast1-docker.pkg.dev/$PROJECT_ID/my-rating-repo/my-rating-app:$SHORT_SHA
       - '--region'
       - australia-southeast1
       - '--service-account'
@@ -33,6 +33,6 @@ steps:
       - '--update-secrets'
       - SPRING_DATA_MONGODB_URI=projects/$PROJECT_NUMBER/secrets/MONGODB_URI:latest
 images:
-  - gcr.io/$PROJECT_ID/my-rating-app:$SHORT_SHA
+  - australia-southeast1-docker.pkg.dev/$PROJECT_ID/my-rating-repo/my-rating-app:$SHORT_SHA
 options:
   logging: CLOUD_LOGGING_ONLY
